<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_with_transparency"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_first_number"
                android:textColor="#192A56"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/first_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_border"
                android:inputType="numberDecimal"
                android:textColor="@color/blueish"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_second_number"
                android:textColor="@color/blueish"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/second_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_border"
                android:textColor="@color/blueish"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="Answer"
                android:textColor="@color/blueish"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/plus"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/plus_sign"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/minus"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/minus_sign"
                    android:textSize="32sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/multiply"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/x"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/divide"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/divide"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/allClear"
                    android:layout_width="165dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/ac"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>